# SimpleRaisimControlModels

./: .gitignore  README.md
doublePendulumControl/src/double_pendulum_bringup/: CMakeLists.txt  package.xml
doublePendulumControl/src/double_pendulum_control/: CMakeLists.txt  package.xml
doublePendulumControl/src/double_pendulum_description/: CMakeLists.txt  package.xml
doublePendulumControl/src/double_pendulum_simulation/: CMakeLists.txt  package.xml
kohaku/src/kohaku_bringup/: CMakeLists.txt  package.xml
kohaku/src/kohaku_control/: CMakeLists.txt  package.xml
kohaku/src/kohaku_description/: CMakeLists.txt  package.xml
kohaku/src/kohaku_simulation/: CMakeLists.txt  package.xml
models/deprecated/quadruped/: config.json  robot.urdf
models/deprecated/quadrupedCollision/: config.json
models/deprecated/quadrupedLeg/: robot.urdf
models/deprecated/quadrupedLegCollision/: config.json  robot.urdf
models/deprecated/simpleQuadrupedLeg/: config.json
models/doublePendulem/: config.json  robot.urdf
models/doublePendulem/assets/: base.part  base.stl  link1.part  link1.stl  link2.part  link2.stl
models/leg_collision/: config.json  robot.urdf
models/leg_collision/assets/: bodysectioncola.part  bodysectioncola.stl  coxamergecolr.part  coxamergecolr.stl  femurmergecolr.part  femurmergecolr.stl  tibiamergecolr.part  tibiamergecolr.stl
models/leg_visual/: config.json  robot.urdf
models/leg_visual/assets/: bodysectiona.part  bodysectiona.stl  coxamerger.part  coxamerger.stl  femurmerger.part  tibiamerger.part
models/quadruped/: config.json  robot.urdf
models/quadruped/assets/: body.part  coxamergeb.part  femurmerger.part  part_1.part  tibiamergel.part  tibiamerger.part
models/quadrupedCollision/: robot.urdf
models/quadrupedCollision/assets/: bodysectionb.part  bodysectioncola.part  bodysectioncola.stl  bodysectioncollb.part  coxamergel.part  femurmergecoll.stl  part_1.part
models/quadrupedLeg/: config.json  robot.urdf
models/quadrupedLeg/assets/: bodysection.part  bodysection.stl  coxamerge.part  femurmerge.part  tibiamerge.part
models/quadrupedLegCollision/assets/: coxamergecol.part  coxamergecol.stl  tibiamergecolr.part
models/quadrupedV1/assets/: coxamergea.part  coxamergeb.stl  femurmergel.part
models/quadrupedV2/: config.json  robot.urdf
models/quadrupedV2/assets/: body.part  body.stl  coxaa.part  coxaa.stl  coxab.part  coxab.stl  femurl.part  femurr.part  pelvisa.part  pelvisa.stl  pelvisb.part  pelvisb.stl  tibia.part
models/simpleQuadrupedLeg/: config.json  robot.urdf
models/simpleQuadrupedLeg/assets/: base.part  base.stl  link0.part  link0.stl  link1.part  link2.part  link2.stl
models/singlePendulem/: config.json  robot.urdf
models/singlePendulem/assets/: base.part  base.stl  link1.part  link1.stl
quadruped/src/quadruped_bringup/: CMakeLists.txt  README.md  package.xml
quadruped/src/quadruped_control/: CMakeLists.txt  README.md  (+1 more)
quadruped/src/quadruped_gait_controller/: CMakeLists.txt  package.xml
quadruped/src/quadruped_gait_controller/src/: gait_controller.cpp  trot_gait_controller.cpp  walk_gait_controller.cpp
quadrupedLegFixed/src/quadruped_leg_simulation/: package.xml
quadrupedLegFixed/src/quadruped_leg_simulation/src/: raisim_bridge.cpp
(+117 files in other folders)
